--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Control de incidencias</title>
   </head>
   <style>
+    @font-face {
+      font-family: 'Avenir';
+      font-weight: normal;
+      src: url('assets/fonts/AvenirLTStd-Roman.otf');
+    }
+    @font-face {
+      font-family: 'Avenir';
+      font-weight: bold;
+      src: url('assets/fonts/AvenirLTStd-Black.otf');
+    }
+    @font-face {
+      font-family: 'Avenir';
+      font-weight: lighter;
+      src: url('assets/fonts/AvenirLTStd-Book.otf');
+    }
     body {
       margin: 0;
       min-height: 100svh;
